--- a/Gallery/app/src/main/res/layout/activity_main.xml
+++ b/Gallery/app/src/main/res/layout/activity_main.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/white"
+    android:background="@color/black"
     android:orientation="vertical"
     tools:context=".MainActivity">
 
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:textColor="@color/white"
-            android:textSize="35dp"
+            android:textSize="25dp"
             android:padding="10dp"
             android:text="Albums"
             android:textStyle="bold"
@@ -26,66 +26,77 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:paddingBottom="5dp">
+        android:background="@color/black"
+        android:padding="10dp">
         <ImageButton
             android:id="@+id/photos_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginLeft="15dp"
-            android:layout_marginRight="15dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_photo"/>
         <ImageButton
             android:id="@+id/videos_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="15dp"
+            android:layout_marginLeft="30dp"
+            android:layout_gravity="center"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_video"/>
         <ImageButton
             android:id="@+id/location_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="15dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_location"/>
         <ImageButton
             android:id="@+id/favorite_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="15dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_favorite"/>
         <ImageButton
             android:id="@+id/secure_view"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginRight="5dp"
+            android:layout_gravity="center"
+            android:layout_marginLeft="30dp"
             android:background="@drawable/custom_button"
             android:src="@drawable/ic_lock"/>
 
     </LinearLayout>
 
-    <GridView
-        android:id="@+id/grid_view"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:columnWidth="90dp"
-        android:gravity="center"
-        android:horizontalSpacing="10dp"
-        android:numColumns="2"
-        android:stretchMode="columnWidth"
-        android:verticalSpacing="100dp"></GridView>
+        android:orientation="vertical">
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="56dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/gallery_number"
+                android:layout_centerVertical="true"
+                android:layout_marginLeft="16dp"
+                android:textColor="@color/white"
+                android:textSize="18dp"
+                android:textStyle="bold"/>
+        </RelativeLayout>
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/recyclerview_gallery_images"
+            />
+
+    </LinearLayout>
 
 
 </LinearLayout>
