--- a/Gallery/app/src/main/res/layout/video_section.xml
+++ b/Gallery/app/src/main/res/layout/video_section.xml
@@ -1,89 +1,186 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+<!--    android:layout_width="match_parent"-->
+<!--    android:layout_height="match_parent"-->
+<!--    xmlns:tools="http://schemas.android.com/tools"-->
+<!--    android:background="@color/black"-->
+<!--    android:orientation="vertical"-->
+<!--    tools:context=".MainActivity">-->
+
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal">-->
+<!--        <TextView-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:textColor="@color/white"-->
+<!--            android:textSize="25dp"-->
+<!--            android:padding="10dp"-->
+<!--            android:text="Albums"-->
+<!--            android:textStyle="bold"-->
+<!--            android:fontFamily="sans-serif"></TextView>-->
+
+<!--    </LinearLayout>-->
+<!--    <LinearLayout-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:orientation="horizontal"-->
+<!--        android:background="@color/black"-->
+<!--        android:padding="10dp">-->
+<!--        <ImageButton-->
+<!--            android:id="@+id/photos_view"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginLeft="10dp"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:src="@drawable/ic_photo"/>-->
+<!--        <ImageButton-->
+<!--            android:id="@+id/videos_view"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_marginLeft="30dp"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:src="@drawable/ic_video"/>-->
+<!--        <ImageButton-->
+<!--            android:id="@+id/location_view"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginLeft="30dp"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:src="@drawable/ic_location"/>-->
+<!--        <ImageButton-->
+<!--            android:id="@+id/favorite_view"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginLeft="30dp"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:src="@drawable/ic_favorite"/>-->
+<!--        <ImageButton-->
+<!--            android:id="@+id/secure_view"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_gravity="center"-->
+<!--            android:layout_marginLeft="30dp"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:src="@drawable/ic_lock"/>-->
+
+<!--    </LinearLayout>-->
+
+<!--</LinearLayout>-->
+
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
-    android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <LinearLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="@color/white"
-            android:textSize="25dp"
-            android:padding="10dp"
-            android:text="Albums"
-            android:textStyle="bold"
-            android:fontFamily="sans-serif"></TextView>
+        android:background="@drawable/toolbar_bg"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme">
 
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:background="@color/black"
-        android:padding="10dp">
-        <ImageButton
-            android:id="@+id/photos_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="10dp"
-            android:background="@drawable/custom_button"
-            android:src="@drawable/ic_photo"/>
-        <ImageButton
-            android:id="@+id/videos_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="30dp"
-            android:layout_gravity="center"
-            android:background="@drawable/custom_button"
-            android:src="@drawable/ic_video"/>
-        <ImageButton
-            android:id="@+id/location_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/custom_button"
-            android:src="@drawable/ic_location"/>
-        <ImageButton
-            android:id="@+id/favorite_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/custom_button"
-            android:src="@drawable/ic_favorite"/>
-        <ImageButton
-            android:id="@+id/secure_view"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginLeft="30dp"
-            android:background="@drawable/custom_button"
-            android:src="@drawable/ic_lock"/>
-
-    </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-
-        <androidx.recyclerview.widget.RecyclerView
+        <androidx.appcompat.widget.Toolbar
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/recyclerview_gallery_videos"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="10dp"
-            />
+            android:layout_height="?attr/actionBarSize"
+            android:layout_gravity="bottom"
+            android:background="@drawable/toolbar_bg"
+            android:id="@+id/toolbarTop"
+            android:theme="@style/AppTheme"
+            app:logo="@drawable/ic_back"
+            app:layout_collapseMode="pin" />
 
-    </LinearLayout>
 
-</LinearLayout>
+
+    </com.google.android.material.appbar.AppBarLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/recyclerview_gallery_images"
+        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
+        />
+
+<!--    <androidx.constraintlayout.widget.ConstraintLayout-->
+<!--        android:id="@+id/constraintLayout"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="?attr/actionBarSize"-->
+<!--        android:layout_gravity="bottom"-->
+<!--        android:background="@drawable/toolbar_bg"-->
+<!--        app:layout_anchorGravity="center">-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/photos_view"-->
+<!--            android:layout_width="@dimen/_30sdp"-->
+<!--            android:layout_height="@dimen/_30sdp"-->
+<!--            android:layout_marginStart="@dimen/_28sdp"-->
+<!--            android:layout_marginLeft="@dimen/_28sdp"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:src="@drawable/ic_photo"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.529" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/videos_view"-->
+<!--            android:layout_width="@dimen/_30sdp"-->
+<!--            android:layout_height="@dimen/_30sdp"-->
+<!--            android:layout_marginStart="@dimen/_28sdp"-->
+<!--            android:layout_marginLeft="@dimen/_28sdp"-->
+<!--            android:src="@drawable/ic_video"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/photos_view"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.529" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/location_view"-->
+<!--            android:layout_width="@dimen/_30sdp"-->
+<!--            android:layout_height="@dimen/_30sdp"-->
+<!--            android:layout_marginStart="@dimen/_28sdp"-->
+<!--            android:layout_marginLeft="@dimen/_28sdp"-->
+<!--            android:src="@drawable/ic_location"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/videos_view"-->
+<!--            app:layout_constraintTop_toTopOf="parent"-->
+<!--            app:layout_constraintVertical_bias="0.529" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/favorite_view"-->
+<!--            android:layout_width="@dimen/_30sdp"-->
+<!--            android:layout_height="@dimen/_30sdp"-->
+<!--            android:src="@drawable/ic_favorite"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:layout_marginStart="@dimen/_28sdp"-->
+<!--            android:layout_marginLeft="@dimen/_28sdp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/location_view"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--        <ImageButton-->
+<!--            android:id="@+id/secure_view"-->
+<!--            android:layout_width="@dimen/_30sdp"-->
+<!--            android:layout_height="@dimen/_30sdp"-->
+<!--            android:src="@drawable/ic_lock"-->
+<!--            android:background="@drawable/custom_button"-->
+<!--            android:layout_marginStart="@dimen/_28sdp"-->
+<!--            android:layout_marginLeft="@dimen/_28sdp"-->
+<!--            app:layout_constraintBottom_toBottomOf="parent"-->
+<!--            app:layout_constraintStart_toEndOf="@+id/favorite_view"-->
+<!--            app:layout_constraintTop_toTopOf="parent" />-->
+
+<!--    </androidx.constraintlayout.widget.ConstraintLayout>-->
+
+
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
