--- a/Gallery/app/src/main/res/values/colors.xml
+++ b/Gallery/app/src/main/res/values/colors.xml
@@ -7,4 +7,6 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="toolbar_1">#2f4f4f</color>
+    <color name="toolbar_2">#000000</color>
 </resources>
