--- a/Gallery/app/src/main/res/layout/activity_main.xml
+++ b/Gallery/app/src/main/res/layout/activity_main.xml
@@ -1,107 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:background="@color/black"-->
-<!--    android:orientation="vertical"-->
-<!--    tools:context=".MainActivity">-->
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal">-->
-<!--        <TextView-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:textColor="@color/white"-->
-<!--            android:textSize="25dp"-->
-<!--            android:padding="10dp"-->
-<!--            android:text="Albums"-->
-<!--            android:textStyle="bold"-->
-<!--            android:fontFamily="sans-serif"></TextView>-->
-
-<!--    </LinearLayout>-->
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:orientation="horizontal"-->
-<!--        android:background="@color/black"-->
-<!--        android:padding="10dp">-->
-<!--        <ImageButton-->
-<!--            android:id="@+id/photos_view"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_marginLeft="10dp"-->
-<!--            android:background="@drawable/custom_button"-->
-<!--            android:src="@drawable/ic_photo"/>-->
-<!--        <ImageButton-->
-<!--            android:id="@+id/videos_view"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginLeft="30dp"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:background="@drawable/custom_button"-->
-<!--            android:src="@drawable/ic_video"/>-->
-<!--        <ImageButton-->
-<!--            android:id="@+id/location_view"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_marginLeft="30dp"-->
-<!--            android:background="@drawable/custom_button"-->
-<!--            android:src="@drawable/ic_location"/>-->
-<!--        <ImageButton-->
-<!--            android:id="@+id/favorite_view"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_marginLeft="30dp"-->
-<!--            android:background="@drawable/custom_button"-->
-<!--            android:src="@drawable/ic_favorite"/>-->
-<!--        <ImageButton-->
-<!--            android:id="@+id/secure_view"-->
-<!--            android:layout_width="wrap_content"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_gravity="center"-->
-<!--            android:layout_marginLeft="30dp"-->
-<!--            android:background="@drawable/custom_button"-->
-<!--            android:src="@drawable/ic_lock"/>-->
-
-<!--    </LinearLayout>-->
-
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:orientation="vertical">-->
-<!--        <RelativeLayout-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="56dp">-->
-
-<!--            <TextView-->
-<!--                android:layout_width="wrap_content"-->
-<!--                android:layout_height="wrap_content"-->
-<!--                android:id="@+id/gallery_number"-->
-<!--                android:layout_centerVertical="true"-->
-<!--                android:layout_marginLeft="16dp"-->
-<!--                android:textColor="@color/white"-->
-<!--                android:textSize="18dp"-->
-<!--                android:textStyle="bold"/>-->
-<!--        </RelativeLayout>-->
-
-<!--        <androidx.recyclerview.widget.RecyclerView-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:id="@+id/recyclerview_gallery_images"-->
-<!--            />-->
-
-<!--    </LinearLayout>-->
-
-
-<!--</LinearLayout>-->
-
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
@@ -142,11 +41,9 @@
                 android:layout_gravity="bottom"
                 android:background="@drawable/toolbar_bg"
                 android:id="@+id/toolbarTop"
-                app:title="@string/albums"
-                app:titleMarginStart="@dimen/_20sdp"
-                android:theme="@style/Theme.Gallery"
+                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+                android:elevation="4dp"
                 app:layout_collapseMode="pin" />
-            
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
         
