--- a/Gallery/app/src/main/res/layout/activity_main.xml
+++ b/Gallery/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
 
     <com.google.android.material.appbar.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/_200sdp"
+        android:layout_height="@dimen/_175sdp"
         android:background="@drawable/toolbar_bg"
         android:fitsSystemWindows="true"
         android:theme="@style/AppTheme">
@@ -21,29 +21,17 @@
             android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             app:title="@string/albums"
+            app:expandedTitleGravity="center"
+            app:expandedTitleTextAppearance="@style/ExpandedText"
             app:contentScrim="?attr/colorPrimary"
             app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textStyle="bold"
-                android:fontFamily="sans-serif-condensed"
-                android:textSize="@dimen/_37ssp"
-                android:textColor="@color/white"
-                android:text="@string/albums"
-                app:layout_collapseMode="parallax"/>
-            
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
+            <include
+                android:id="@+id/toolbarAlbums"
+                layout="@layout/toolbar"
                 android:layout_height="?attr/actionBarSize"
-                android:layout_gravity="bottom"
-                android:background="@drawable/toolbar_bg"
-                android:id="@+id/toolbarTop"
-                android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
-                android:elevation="4dp"
-                app:layout_collapseMode="pin" />
+                android:layout_width="match_parent"
+                app:layout_collapseMode="pin"/>
 
         </com.google.android.material.appbar.CollapsingToolbarLayout>
         
