--- a/Gallery/app/src/main/res/menu/setting.xml
+++ b/Gallery/app/src/main/res/menu/setting.xml
@@ -1,14 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/about"
         android:title="About"/>
     <item android:id="@+id/create_album"
         android:title="Create album"/>
     <item android:id="@+id/setting"
         android:title="Settings"/>
-    <item android:id="@+id/search"
-        android:title=""
-        android:icon="@drawable/ic_search"
-        app:showAsAction="always"/>
 </menu>
