--- a/Gallery/app/src/main/res/layout/activity_main.xml
+++ b/Gallery/app/src/main/res/layout/activity_main.xml
@@ -114,8 +114,16 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@+id/favorite_view"
             app:layout_constraintTop_toTopOf="parent" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|right"
+        android:layout_margin="16dp"
+        android:contentDescription="Camera"
+        app:srcCompat="@drawable/ic_camera"
+        tools:ignore="VectorDrawableCompat"/>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
