--- a/Gallery/app/src/main/res/menu/setting.xml
+++ b/Gallery/app/src/main/res/menu/setting.xml
@@ -4,6 +4,8 @@
         android:title="About"/>
     <item android:id="@+id/create_album"
         android:title="Create album"/>
+    <item android:id="@+id/change_to_by_date"
+        android:title="View by date"/>
     <item android:id="@+id/setting"
         android:title="Settings"/>
 </menu>
